# Homework10.1

./: .coverage  .env.simple  README.md  main.py  pyproject.toml
data/: test_log.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  search_data.py  take_transaction_by_pb.py  utils.py  widget.py
test/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_search_data.py  test_take_transaction_by_pd.py  test_utils.py  test_widget.py
